# auto-connect-rs

./: Cargo.toml  README.md
src/: common.rs  main.rs  menu.rs  stroke_play.rs
