[package]
name = "auto-connect-rs"
version = "0.1.0"
authors = ["Zach Allen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.4"
autopilot = "0.4.0"
rand = "0.8.3"
simplelog = "^0.10.0"
log = {version = "0.4.*",features = ["std"] }
inputbot = "0.5.0"